--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,19 @@ services:
     build:
         context: .
         dockerfile: Dockerfile
+    depends_on:
+      - mysql
+    links:
+      - mysql
     ports:
       - 8881:8000
+
     volumes:
       - ./:/var/www/html
-    command: [ "php", "artisan","serve", "--host=0.0.0.0","--port=8000", "--no-ansi" ]
+
+    command: bash -c "composer install
+      && php artisan migrate
+      && php artisan serve --host=0.0.0.0 --port=8000 --no-ansi"
 
   mysql:
     image: mysql
@@ -20,10 +28,11 @@ services:
       MYSQL_ROOT_PASSWORD: ahmed
     volumes:
       - sqlvolume:/var/lib/mysql
+
   phpmyadmin:
       image: phpmyadmin/phpmyadmin
       ports:
-        - 8882:80
+        - 8883:80
       restart: always
       links:
         - mysql
