add readme file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,8 @@ services:
 
     command: bash -c "composer install
       && php artisan migrate
-      && php artisan serve --host=0.0.0.0 --port=8000 --no-ansi"
+      && php artisan serve --host=0.0.0.0 --port=8000 --no-ansi
+      && crontab /etc/cron.d/hello-cron"
 
   mysql:
     image: mysql
