--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ LOG_CHANNEL=stack
 MOVIES_API_KEY=
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=movies
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=ahmed
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
